class Coordinates {
	private int longitude;
	private int latitute;
	private int height;

	~Coordinates(int p_longitude, int p_latitude, int p_height)

	public int getLongitude() {
		return latitute;
	}

	public int getLatitude() {
		return latitute;
	}
	
	public int getHeight() {
		return height;
	}
}