package avaj;

class WeatherTower extends Tower {

	WeatherTower() {}

	public String getWeather(Coordinates p_coordinates){
		return "haha";
	}

	public void changeWeather() {
		for (Flyable flyable : observers) {
			getWeather 
		}
	}
}